Bug fix - remove overflow

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -30,9 +30,7 @@ $breakpoint-phone: 414px;
 
 body, html {
     width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
+    height: 100%;    
 }
 html {
     scroll-behavior:smooth
